<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam</name>
  <version>0.0.1</version>
  <description>SLAM package with QR code detection and RTAB-Map integration</description>
  <maintainer email="aero@todo.todo">aero</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rtabmap_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_slam</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pandas</depend>
  <depend>python3-torch</depend>
  <depend>python3-pyzbar</depend>
  <depend>ultralytics</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
